<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clapp</name>
  <version>0.1.0</version>
  <description>The clapp package</description>
  <license>Apache License 2.0</license>
  <author>Tae Jung Kim</author>
  <maintainer email="dwsun@can-lab.co.kr">Dongwoo Sun</maintainer>
  <maintainer email="rlatae123@can-lab.co.kr">Taejung Kim</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
</package>
